fix(ZNTA-2143) alignment of user icon on admin page and colour fix

--- a/server/zanata-frontend/src/frontend/app/styles/gwt.less
+++ b/server/zanata-frontend/src/frontend/app/styles/gwt.less
@@ -54,7 +54,7 @@
     color: @color-dark !important;
   }
 
-  #userSearch-pager  i.txt--neutral.i--users {
+  .panel__results__type  i.i.txt--neutral.i--users {
     vertical-align:super;
   }
 
